--- a/barebones-cluster/nginx-default.yaml
+++ b/barebones-cluster/nginx-default.yaml
@@ -1,9 +1,12 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-nginx
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      run: my-nginx
   template:
     metadata:
       labels:
